Fix experience being cut off

--- a/src/app/components/experience/experience.component.scss
+++ b/src/app/components/experience/experience.component.scss
@@ -23,8 +23,8 @@
 .experience {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  text-align: center;
 
   fa-icon {
     color: $primary;
